--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<embed src="song.mp3" width="0" height="0" loop="-1" autostart="true"> </embed>
 	<div class="header">	
       <div class="container"> 
   	     <div class="logo">
@@ -40,7 +39,11 @@
 		<div class="col-md-2 col_1">
 			<h4>Green</h4>
 		</div>
-	
+<audio loop autoplay style="display:none">
+            <source src="http://music.163.com/song?id=504468001&userid=113133489" 
+            type="audio/mpeg" >
+            您的浏览器不支持 audio 元素。
+        </audio>	
 
 
 </body>
