--- a/index.html
+++ b/index.html
@@ -1,38 +1,8 @@
 <html>
 <head>
 <title>Happy Birthday</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="Happy Birthday" />
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<!-- Custom Theme files -->
-<link href="css/style.css" rel='stylesheet' type='text/css' />
-<!-- Custom Theme files -->
-<!--webfont-->
-<link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<div class="header">	
-      <div class="container"> 
-  	     <div class="logo">
-			<h1><a href="index.html">Photo Hub</a></h1>
-		 </div>
-		 <div class="top_right">
-		   <ul>
-			<li><a><strong>Fancy</strong></a></li>|
-			<li class="login" >Birthday</li>
-		   </ul>
-	     </div>
-		 <div class="clearfix"></div>
-		</div>
-	</div>
-	<div class="banner">
-		<div class="container">
-			<div class="span_1_of_1">
-			</div>
-		</div>
 	</div>
 	<div class="grid_1">
 		<h3>Happy Birthday To CHEN YANLIN</h3>
@@ -40,7 +10,7 @@
 			<h4>Green</h4>
 		</div>
 <audio loop autoplay style="display:none">
-            <source src="http://music.163.com/song?id=504468001&userid=113133489" 
+            <source src="http://music.163.com/song/media/outer/url?id=504468001.mp3" 
             type="audio/mpeg" >
             您的浏览器不支持 audio 元素。
         </audio>	
