--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 		<h1>Happy Birthday To CHEN YANLIN</h1>
 		<div class="col-md-2 col_1">
 		</div>
+		<div id="carousel"  class="carousel slide carousel-fade carousel-position">
+
+            <div class="carousel-inner" style="width: 100%;height: 100%;" id="background">
+
+                <div class="item active" style="width: 100%;height: 100%;">
+
+                    <div style="width: 100%;height: 100%;background:url(./1.jpg);background-size: cover;"></div>
+
+                </div>
 <audio loop autoplay style="display:none">
             <source src="http://music.163.com/song/media/outer/url?id=504468001.mp3" 
             type="audio/mpeg" >
