--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	<div class="grid_1">
 		<h1>Happy Birthday To CHEN YANLIN</h1>
 		<div class="col-md-2 col_1">
+	<div class="grid_2">
 		</div>
 	        <h1>“If you are still looking for that one person who will change your life, take a look in the mirror.”</h1>
-                </div>
+                <div class="col-md-2 col_1">
+		</div>
 <audio loop autoplay style="display:none">
             <source src="http://music.163.com/song/media/outer/url?id=504468001.mp3" 
             type="audio/mpeg" >
