--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 		</div>
 	        <h1>“If you are still looking for that one person who will change your life, take a look in the mirror.”</h1>
                 <div class="col-md-2 col_1">
+  	<div class="grid_3">
 		</div>
+	        <h1>“I would share my sadness with you. But just a little. I prefer to share my happiness with you. Even wish you could feel happy as I felt”</h1>
+                <div class="col-md-2 col_1">ss
 <audio loop autoplay style="display:none">
             <source src="http://music.163.com/song/media/outer/url?id=504468001.mp3" 
             type="audio/mpeg" >
