--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 	</div>
 	<div class="grid_1">
-		<h1>Happy Birthday To CHEN YANLIN</h1>
+		<h1>    Happy Birthday To CHEN YANLIN</h1>
 		<div class="col-md-2 col_1">
 	<div class="grid_2">
 		</div>
@@ -14,7 +14,7 @@
   	<div class="grid_3">
 		</div>
 	        <h1>“I would share my sadness with you. But just a little. I prefer to share my happiness with you. Even wish you could feel happy as I felt”</h1>
-                <div class="col-md-2 col_1">ss
+                <div class="col-md-2 col_1">
 <audio loop autoplay style="display:none">
             <source src="http://music.163.com/song/media/outer/url?id=504468001.mp3" 
             type="audio/mpeg" >
