--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 		</div>
 	        <h1>“I would share my sadness with you. But just a little. I prefer to share my happiness with you. Even wish you could feel happy as I felt”</h1>
                 <div class="col-md-2 col_1">
+			<div class="col-xs-4 col-md-4">
+
+				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
+
+					<img src="2.jpg" alt="...">
 <audio loop autoplay style="display:none">
             <source src="http://music.163.com/song/media/outer/url?id=504468001.mp3" 
             type="audio/mpeg" >
