--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		</div>
 	        <h1>“I would share my sadness with you. But just a little. I prefer to share my happiness with you. Even wish you could feel happy as I felt”</h1>
                 <div class="col-md-2 col_1">
-			<div class="col-xs-4 col-md-4">
-               </div>
-		![image](http://github.com/ZMJ1998/Chenyanlin/raw/master/2.jpg)
-		</div>	
+
+			<img src="2.jpg" class="img-responsive" alt=""/>
+
+		</div>
 <audio loop autoplay style="display:none">
             <source src="http://music.163.com/song/media/outer/url?id=504468001.mp3" 
             type="audio/mpeg" >
