--- a/index.html
+++ b/index.html
@@ -19,6 +19,39 @@
 			<img src="2.jpg" class="img-responsive" alt=""/>
 
 		</div>
+	 	</div>
+
+    <script type="text/javascript" src="./js/jquery-1.12.2.min.js"></script>
+
+    <script type="text/javascript" src="./js/bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="./js/count-time.js"></script>
+
+    <script>
+
+    $(function() {
+
+        //设置起始日期
+
+        countTime('1999/08/10 00:00', 'day', 'hour', 'minute', 'second');
+
+        var days = $('#day').text();
+
+
+
+        // 设置标题
+
+        if (parseInt(days / 365) != 0) {
+
+            $(document).attr("title", "come to this world for" + parseInt(days / 365));
+
+        } else if (parseInt(days / 30) != 0) {
+
+            $(document).attr("title", "come to this world for" + parseInt(days / 30) );
+
+        } else
+
+            $(document).attr("title", "come to this world for" + days );
 <audio loop autoplay style="display:none">
             <source src="http://music.163.com/song/media/outer/url?id=504468001.mp3" 
             type="audio/mpeg" >
